--- a/axios/01.html
+++ b/axios/01.html
@@ -10,18 +10,72 @@
 
 <body>
     <div>
-        <button>Get</button>
+        <button onclick="testGet()">Get</button>
         <button onclick="testPost()">POST</button>
         <button>PUT</button>
         <button>DELETE</button>
     </div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script>
+        // 指定默认配置  
+        axios.defaults.baseURL = 'https://www.fastmock.site/mock/85a46960d7013b5ce0eb8b3deebbcb93/navigation'
+
+
+        function testGet() {
+            // axios.get('https://www.fastmock.site/mock/85a46960d7013b5ce0eb8b3deebbcb93/navigation/companys')
+            axios({
+                    url: '/companys',
+                })
+                .then(response => {
+                    console.log(response.data.Company.list)
+                })
+        }
+
+        // function testPost() {
+        //     axios.post('/skill')
+        //         .then(response => {
+        //             console.log(response.data.Skill.list) 
+        //         })
+        // }
         function testPost() {
-            axios.post('https://www.fastmock.site/mock/85a46960d7013b5ce0eb8b3deebbcb93/navigation/skill').then(response => {
-                console.log(response.data.Skill.list)
+            axios({
+                url: '/skill',
+                method: 'post',
+                data: {
+                    "name": "aa",
+                    "url": "http://baidu.com"
+                }
+            }).then(response => {
+                console.log(response)
             })
         }
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+        // XHR 对象学习
+        // btn.onclick = function() {
+        //     var xhr;
+        //     xhr = new XMLHttpRequest();
+        //     xhr.open("post", "https://www.fastmock.site/mock/85a46960d7013b5ce0eb8b3deebbcb93/navigation/skill", false);
+        //     xhr.send("https://www.fastmock.site/mock/85a46960d7013b5ce0eb8b3deebbcb93/navigation/skill");
+        //     // 同步接受响应
+        //     if (xhr.readyState == 4) {
+        //         if (xhr.status == 200) {
+        //             console.log(result)
+        //         }
+        //     }
+        // }
     </script>
 </body>
 
