feat:promise的几个关键问题

--- a/Promise/01.html
+++ b/Promise/01.html
@@ -46,6 +46,23 @@
         } catch (error) {
             console.log(error)
         }
+
+
+        console.log("------------")
+        var p = Promise.all([]); // will be immediately resolved
+        var p2 = Promise.all([1337, "hi"]); // non-promise values will be ignored, but the evaluation will be done asynchronously
+        console.log(p);
+        console.log(p2)
+        setTimeout(function() {
+            console.log('the stack is now empty');
+            console.log(p2);
+        });
+
+        // logs
+        // Promise { <state>: "fulfilled", <value>: Array[0] }
+        // Promise { <state>: "pending" }
+        // the stack is now empty
+        // Promise { <state>: "fulfilled", <value>: Array[2] }
     </script>
 </body>
 
