--- a/Promise/03.html
+++ b/Promise/03.html
@@ -10,48 +10,35 @@
 
 <body>
     <script>
-        /*
-                                6.promise异常传透?
-                                  (1)当使用promise的then链式调用时, 可以在最后指定失败的回调,
-                                  (2)前面任何操作出了异常, 都会传到最后失败的回调中处理
-                                7.中断promise链?
-                                  (1)当使用promise的then链式调用时, 在中间中断, 不再调用后面的回调函数
-                                  (2)办法: 在回调函数中返回一个pending状态的promise对象
-                                */
+        function resolveAfter2Seconds(x) {
+            return new Promise(resolve => {
+                setTimeout(() => {
+                    resolve(x);
+                }, 2000);
+            });
+        }
 
-        new Promise((resolve, reject) => {
-            reject(1)
-        }).then(
-            value => {
-                console.log('onResolved1()', value)
-                return 2
-            },
-            // 什么都没写就相当于 reason => {throw reason}  向下抛
-        ).then(
-            value => {
-                console.log('onResolved2()', value)
-                return 3
-            },
-            reason => {
-                throw reason
+        async function f1() {
+            // await 将等待 Promise 正常处理完成并返回其处理结果
+            var x = await resolveAfter2Seconds(10);
+            console.log(x); // 2秒后 打印10
+        }
+        f1();
+
+        async function f2() {
+            var y = await 20;
+            console.log(y); //立即输出 20
+        }
+        f2();
+
+        async function f3() {
+            try {
+                var z = await Promise.reject("出错了")
+            } catch (error) {
+                console.log(error)
             }
-        ).then(
-            value => {
-                console.log('onResolved3()', value)
-            },
-            reason => Promise.reject(reason)
-        ).catch(reason => {
-            console.log('onReejected1()', reason) //onReejected1() 1
-            return new Promise(() => {})
-                // 返回一个pending的promise  中断promise链
-        }).then(
-            value => {
-                console.log('onResolved3()', value)
-            },
-            reason => {
-                console.log('onReejected2()', reason)
-            }
-        )
+        }
+        f3();
     </script>
 </body>
 
