--- a/Promise/test02.html
+++ b/Promise/test02.html
@@ -14,36 +14,36 @@
 
         const promise2 = () =>
             new Promise((resolve) => {
-                // setTimeout(() => {
-                resolve(2)
-                    // }, 1000)
+                setTimeout(() => {
+                    resolve(2)
+                }, 1000)
             });
 
         const promise3 = () => new Promise((resolve) => {
-            // setTimeout(() => {
-            resolve(3)
-                // }, 1000)
+            setTimeout(() => {
+                resolve(3)
+            }, 1000)
         });
 
         const promiseList = [promise1, promise2, promise3];
 
         function promiseChain(promiseList) {
-            // return promiseList.reduce((prev, next) => prev.then((res) => { return next() }), Promise.resolve())
-            return new Promise((resolve, reject) => {
-                for (let i = 0; i < promiseList.length; i++) {
-                    promiseList[i]().then(res => {
-                        console.log(res)
-                        return resolve()
-                    }).catch(err => {
-                        reject(err)
-                    })
-                }
-                // resolve()
+            var promiseChain = promiseList.reduce((prev, next) =>
+                prev.then((res) => {
+                    if (res !== undefined)
+                        console.log(res);
+                    return next()
+                }),
+                Promise.resolve());
+
+            promiseChain.then((res) => {
+                console.log(res)
+                console.log("所有promise执行完毕")
             })
         }
-        promiseChain(promiseList).then(() => {
-            console.log("所有Promise执行完毕")
-        })
+        // promiseChain(promiseList).then(() => {
+        //     console.log("所有Promise执行完毕")
+        // })
     </script>
 </body>
 
